--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.main{background-color:#e7fdff;padding:40px}.main .title{text-align:center;margin-bottom:20px}.container{max-width:800px;margin:0 auto}.app{border:1px solid #e1e4eb;border-radius:25px}.app__item{min-height:72px;padding:10px 30px;background-color:#f7fbfc;display:flex;justify-content:space-between;align-items:center;cursor:pointer;border-radius:25px}.app__item-wrapper{border-bottom:1px solid #888;padding:10px}.app__item-wrapper:last-child{border-bottom:none}.app__item-code{text-align:center;width:190px}.app__item-code--name{font-size:12px;font-weight:600;color:#5f9ea0}.app__item-currency{min-width:150px;text-align:left}.app__item-currency span{font-weight:600}.app__item-percent{width:90px}.app__item-percent--color.red{color:red}.app__item-percent--color.green{color:#0d0}.app__item--plusTenBlock{border-bottom:1px solid #e0dada;transition:background-color .3s}.app__item--plusTenBlock:hover{background-color:#e7f3ff}.app__item--plusTenBlock:last-child{border-bottom:none}.app__item-min{display:flex;justify-content:space-between;align-items:center;padding:10px 15px}.app__item-min--date{font-weight:600}
